# DocNavi

./: .gitignore  DockerFile  README.md  config.yml  docker-compose.yml  frontend.py  main.py  project.md  pyproject.toml
src/app/: API.py
src/app/common/: __init__.py  exceptions.py  logger.py  settings.py
src/app/components/: __init__.py  acronym_resolver.py  bm25_index.py  content_classifier.py  embedder.py  hierarchical_chunker.py  ingestion_pipeline.py  pdf_parser.py  query_pipeline.py  table_parser.py  vlm_descriptor.py
src/app/database/: __init__.py  qdrant_client.py
src/app/v1/models/: collection.py  health_check.py  ingestion.py  query.py
src/app/v1/routers/: collection.py  debug.py  health_check.py  ingestion.py  query.py
