[project]
name = "docnavi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "langchain-core>=1.2.22",
    "langgraph>=1.1.3",
    "nest-asyncio>=1.6.0",
    "openai>=2.30.0",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.17.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.55.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.42.0",
]
